tests/testcases/errors/BCE0102-1.boo
"""
BCE0102-1.boo(6,12): BCE0102: Generators cannot return values.
"""
def foo():
	yield 1
	return 42
	
